//go:generate protoc -I=. --go_out=. --go_opt=paths=source_relative weather.proto

syntax = "proto3";

option go_package = "github.com/maljanahi99/weather_tracker/protos/weather";

message GetWeatherRequest {
  float latitude = 1;
  float longitude = 2;
}

message WeatherResponse {
  Current current = 1;
}

message Current {
 float temperature = 1;
}

service WeatherService {
  rpc GetWeather(GetWeatherRequest) returns (WeatherResponse) {};
}